[workspace]
resolver = "3"
members = [
    "hpm5301_pac",
    "hpm5301_hal",
    "yblink",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
hpm5301_pac = { path = "hpm5301_pac" }
hpm5301_hal = { path = "hpm5301_hal" }
critical-section = "1.2.0"
embassy-executor = "0.10.0"
panic-halt = "1.0.0"
riscv = "0.16.0"
riscv-rt = "0.17.1"
embedded-hal = "1.0.0"
embassy-time = { version = "0.5.1", features = ["tick-hz-1_000_000"] }
embassy-time-driver = { version = "0.2.2", features = ["tick-hz-1_000_000"] }
embassy-usb = { version = "0.6.0", default-features = false }
embassy-usb-driver = "0.2.1"
embassy-futures = "0.1.2"

[profile.release]
strip = false
lto = "fat"
codegen-units = 1
opt-level = 3
debug = 2
